<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout_1">

    <LinearLayout
        android:id="@+id/linear_layout_0"
        style="@style/LinearLayout_IconsImages">

        <ImageView
            android:id="@+id/activity_mood_home_image_id"
            style="@style/HomeIconImage" />

        <ImageView
            android:id="@+id/activity_mood_playing_now_image_id"
            style="@style/PlayingNowIconImage" />

        <ImageView
            android:id="@+id/activity_mood_search_image_id"
            style="@style/SearchIconImage" />

        <ImageView
            android:id="@+id/activity_mood_add_new_image_id"
            style="@style/AddPlaylistIconImage" />

        <ImageView
            android:id="@+id/activity_mood_playlists_image_id"
            style="@style/AddedPlaylistIconImage" />

        <ImageView
            android:id="@+id/activity_mood_radio_image_id"
            style="@style/RadioIconImage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        style="@style/LinearLayout_IconsText">

        <TextView
            android:id="@+id/activity_mood_home_id"
            style="@style/HomeIconText" />

        <TextView
            android:id="@+id/activity_mood_playing_now_id"
            style="@style/PlayingNowIconText" />

        <TextView
            android:id="@+id/activity_mood_search_id"
            style="@style/SearchIconText" />

        <TextView
            android:id="@+id/activity_mood_add_new_id"
            style="@style/AddPlaylistIconText" />

        <TextView
            android:id="@+id/activity_mood_playlists_id"
            style="@style/AddedPlaylistIconText" />

        <TextView
            android:id="@+id/activity_mood_radio_id"
            style="@style/RadioIconText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_mood"
        style="@style/LinearLayout_Vertical">

        <RelativeLayout style="@style/RelativeLayout_AddedPlaylist">

            <TextView
                style="@style/TextPlaylist_AddedPlaylist"
                android:text="@string/mood_cant_sleep" />

            <ImageView style="@style/ImagePlaylist_AddedPlaylist" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayout_AddedPlaylist">

            <TextView
                style="@style/TextPlaylist_AddedPlaylist"
                android:text="@string/mood_party" />

            <ImageView style="@style/ImagePlaylist_AddedPlaylist" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayout_AddedPlaylist">

            <TextView
                style="@style/TextPlaylist_AddedPlaylist"
                android:text="@string/mood_romance" />

            <ImageView style="@style/ImagePlaylist_AddedPlaylist" />
        </RelativeLayout>

        <RelativeLayout style="@style/RelativeLayout_AddedPlaylist">

            <TextView
                style="@style/TextPlaylist_AddedPlaylist"
                android:text="@string/mood_workout" />

            <ImageView style="@style/ImagePlaylist_AddedPlaylist" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_below="@id/linear_layout_mood"
        style="@style/DescriptionTextView"
        android:text="@string/description_mood"/>


    <LinearLayout style="@style/LinearLayout_MusicPlayer">

        <ImageView style="@style/PreviousOnPlayer" />

        <ImageView style="@style/PlayPauseOnPlayer" />

        <ImageView style="@style/NextOnPlayer" />


    </LinearLayout>

</RelativeLayout>