<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RelativeLayout_1">

    <LinearLayout
        android:id="@+id/linear_layout_0"
        style="@style/LinearLayout_IconsImages">

        <ImageView
            android:id="@+id/now_playing_home_image_id"
            style="@style/HomeIconImage" />

        <ImageView
            android:id="@+id/now_playing_search_image_id"
            style="@style/SearchIconImage" />

        <ImageView
            android:id="@+id/now_playing_add_image_id"
            style="@style/AddPlaylistIconImage" />

        <ImageView
            android:id="@+id/now_playing_playlist_image_id"
            style="@style/AddedPlaylistIconImage" />

        <ImageView
            android:id="@+id/now_playing_mood_image_id"
            style="@style/MoodIconImage" />

        <ImageView
            android:id="@+id/now_playing_radio_image_id"
            style="@style/RadioIconImage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        style="@style/LinearLayout_IconsText">

        <TextView
            android:id="@+id/now_playing_home_id"
            style="@style/HomeIconText" />

        <TextView
            android:id="@+id/now_playing_search_id"
            style="@style/SearchIconText" />

        <TextView
            android:id="@+id/now_playing_add_id"
            style="@style/AddPlaylistIconText" />

        <TextView
            android:id="@+id/now_playing_playlist_id"
            style="@style/AddedPlaylistIconText" />

        <TextView
            android:id="@+id/now_playing_mood_id"
            style="@style/MoodIconText" />

        <TextView
            android:id="@+id/now_playing_radio_id"
            style="@style/RadioIconText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_2"
        style="@style/LinearLayout_activity_now_playing">

        <ImageView style="@style/ImageView_activity_now_playing" />

        <LinearLayout style="@style/LinearLayout2_activity_now_playing">

            <TextView
                style="@style/TextView_activity_now_playing"
                android:text="@string/song_artist" />

            <TextView
                style="@style/TextView_activity_now_playing"
                android:text="@string/song_name" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout style="@style/LinearLayout_MusicPlayer">

        <ImageView style="@style/PreviousOnPlayer" />

        <ImageView style="@style/PlayPauseOnPlayer" />

        <ImageView style="@style/NextOnPlayer" />


    </LinearLayout>

    <ImageView
        android:id="@+id/note"
        style="@style/ImageView_Note_activity_now_playing" />
    <TextView
        android:layout_below="@id/linear_layout_2"
        style="@style/DescriptionTextView"
        android:text="@string/description_now_playing"/>


</RelativeLayout>